--- a/grud/package.json
+++ b/grud/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
+  },
+  "dependencies": {
+    "json-server": "^1.0.0-alpha.23"
   }
 }
