parte de buscar dados feita

--- a/grud/src/app.json
+++ b/grud/src/app.json
@@ -1,16 +1,28 @@
 {
   "produtos": [
     {
-      "id": "1219",
-      "nomeProduto": "uva",
-      "preco": "4",
-      "quantidade": "22"
+      "id": "353a",
+      "nomeProduto": "carlos",
+      "preco": "44",
+      "quantidade": "4"
     },
     {
-      "id": "1054",
-      "nomeProduto": "bana",
-      "preco": "10",
-      "quantidade": "22"
+      "id": "21ce",
+      "nomeProduto": "laranja",
+      "preco": "25",
+      "quantidade": "10"
+    },
+    {
+      "id": "6016",
+      "nomeProduto": "uva",
+      "preco": "1",
+      "quantidade": "2"
+    },
+    {
+      "id": "32e7",
+      "nomeProduto": "frango",
+      "preco": "4",
+      "quantidade": "1"
     }
   ]
 }
