--- a/grud/package.json
+++ b/grud/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
-    "json-server": "^1.0.0-alpha.23"
+    "json-server": "^1.0.0-alpha.23",
+    "sweetalert2": "^11.10.5"
   }
 }
