--- a/grud/src/app.json
+++ b/grud/src/app.json
@@ -1,118 +1,16 @@
 {
   "produtos": [
     {
-      "id": "b7aa",
+      "id": "92fb",
+      "nomeProduto": "ovo",
+      "preco": "24",
+      "quantidade": "1"
+    },
+    {
+      "id": "7a63",
       "nomeProduto": "",
       "preco": "",
       "quantidade": ""
-    },
-    {
-      "id": "6e63",
-      "nomeProduto": "frango",
-      "preco": "5",
-      "quantidade": "25"
-    },
-    {
-      "id": "ffe6",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "7aef",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "b07c",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "b887",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "7e7d",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "0883",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "d23f",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "ebdd",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "dfa1",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "a5f3",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "19ba",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "dd7c",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "6331",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "0593",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "cf7e",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "f64c",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
-    },
-    {
-      "id": "9be6",
-      "nomeProduto": "p",
-      "preco": "4",
-      "quantidade": "2"
     }
   ]
 }
