verificacaop colocada em cadastra os produtos

--- a/grud/src/app.json
+++ b/grud/src/app.json
@@ -1,13 +1,13 @@
 {
   "produtos": [
     {
-      "id": "92fb",
-      "nomeProduto": "ovo",
-      "preco": "24",
-      "quantidade": "1"
+      "id": "7a63",
+      "nomeProduto": "",
+      "preco": "",
+      "quantidade": ""
     },
     {
-      "id": "7a63",
+      "id": "90a1",
       "nomeProduto": "",
       "preco": "",
       "quantidade": ""
