--- a/grud/src/app.json
+++ b/grud/src/app.json
@@ -1,10 +1,3 @@
 {
-  "produtos": [
-    {
-      "id": "c35e",
-      "nomeProduto": "uva",
-      "preco": "",
-      "quantidade": ""
-    }
-  ]
+  "produtos": []
 }
