agora deleta da tabela

--- a/grud/src/app.json
+++ b/grud/src/app.json
@@ -1,3 +1,12 @@
 {
-  "produtos": []
+  "produtos": [
+    {
+      "id": "cad1",
+      "nomeProduto": "salgadinho",
+      "preco": "25",
+      "quantidade": "1",
+      "data": "15:20:44",
+      "descricao": "444"
+    }
+  ]
 }
