--- a/grud/package.json
+++ b/grud/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "json-server": "^1.0.0-alpha.23",
     "sweetalert2": "^11.10.5"
