salvando dados deletados ok.

--- a/grud/src/app.json
+++ b/grud/src/app.json
@@ -1,20 +1,20 @@
 {
   "produtos": [
     {
-      "id": "f3ce",
-      "nomeProduto": "44",
-      "preco": "2",
-      "quantidade": "99",
-      "data": "19:20:46",
+      "id": "72ef",
+      "nomeProduto": "frango",
+      "preco": "44",
+      "quantidade": "44",
+      "data": "15:02:13",
       "categoriaDoproduto": "Congelados"
     },
     {
-      "id": "0ce3",
-      "nomeProduto": "frango",
-      "preco": "25",
+      "id": "7642",
+      "nomeProduto": "morango",
+      "preco": "4",
       "quantidade": "4",
-      "data": "20:11:49",
-      "categoriaDoproduto": "Congelados"
+      "data": "17:28:45",
+      "categoriaDoproduto": "Suplementos alimentares"
     }
   ]
 }
